--- a/source/sass/blocks/portfolio.scss
+++ b/source/sass/blocks/portfolio.scss
@@ -1,21 +1,35 @@
 .portfolio {
   background-color: $secondary-bg;
   color: $white;
-  padding: 120px 0;
+  padding: 70px 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 100px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 120px 0;
+  }
 }
 
 .portfolio__title {
   //Fonts
   @include primary-font;
+  font-size: 32px;
 
   @media (min-width: $tablet-width) {
     //Fonts
+    font-size: 36px;
   }
 
   @media (min-width: $desktop-width) {
     //Fonts
-    font-size: 60px;
+    font-size: 50px;
   }
+}
+
+.portfolio__title {
+
 }
 
 .portfolio__subtitle {
